src/test/ui/mismatched_types/overloaded-calls-bad.stderr
error[E0308]: mismatched types
  --> $DIR/overloaded-calls-bad.rs:28:17
   |
LL |     let ans = s("what");
   |                 ^^^^^^ expected isize, found reference
   |
   = note: expected type `isize`
              found type `&'static str`

error[E0057]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:29:15
   |
LL |     let ans = s();
   |               ^^^ expected 1 parameter

error[E0057]: this function takes 1 parameter but 2 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:31:15
   |
LL |     let ans = s("burma", "shave");
   |               ^^^^^^^^^^^^^^^^^^^ expected 1 parameter

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0057, E0308.
For more information about an error, try `rustc --explain E0057`.
